[package]
name = "multhreadown"
version = "0.1.1"
edition = "2021"
authors = ["littlepenguin66 <littlepenguinzq@gmail.com>"]
description = "A multi-threaded download manager with resume capability"
license = "MIT"
repository = "https://github.com/littlepenguin66/multhreadown"
documentation = "https://github.com/littlepenguin66/multhreadown/blob/main/README.md"
readme = "README.md"
keywords = ["download", "http", "multi-threaded", "downloader"]
categories = ["network-programming", "asynchronous"]

[dependencies]
indicatif = { version = "0.17", features = ["tokio"] }
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli"] }
tokio = { version = "1", features = ["full", "time"] }
rand = "0.8"
md5 = "0.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
futures-util = "0.3"
log = "0.4"
env_logger = "0.9"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
bytesize = "1.1"
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3.8"

[[bench]]
name = "download_bench"
harness = false

[lib]
name = "multhreadown"
path = "src/lib.rs"

[[bin]]
name = "multhreadown"
path = "src/main.rs"
